Add worklog autofill command and improve dev UX

--- a/web/index.html
+++ b/web/index.html
@@ -81,7 +81,7 @@
         </section>
       </aside>
     </main>
-    <script src="/app.js"></script>
+    <script src="/app.js?v=1"></script>
   </body>
 </html>
 
